--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     background-color:lightgrey;
     border: solid black;
     border-radius: 13%;
-    margin-right: 30%;
+    margin-bottom: 20%;
     width: 440px;
     height: 510px;
    
